<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gebruiker.boardgameapp.LoginFragment"
    android:id="@+id/loginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bentonsans_bold"
            android:paddingBottom="20dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textAlignment="center"
            android:paddingTop="20dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorPrimary"
                android:padding="20dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorPrimary"
                android:padding="20dp"
                android:text="@string/sign_out" />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/register" />


        </LinearLayout>
    </LinearLayout>

</FrameLayout>
