<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_diagonal">


    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="20dp"
        app:srcCompat="@drawable/large_placeholder" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/bentonsans_bold"
                android:text="@string/title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                android:layout_margin="10dp"
                android:fontFamily="@font/bentonsans_reg"
                android:text="@string/year" />

            <RelativeLayout
                android:id="@+id/gameinfo"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/year"
                android:background="@drawable/bg_large_gradient">

                <LinearLayout
                    android:id="@+id/text_static"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_marginStart="36dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/playtime_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="@font/bentonsans_bold"
                        android:text="@string/playtime"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorBackground" />

                    <TextView
                        android:id="@+id/age_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="@font/bentonsans_bold"
                        android:text="@string/age"
                        android:textColor="@color/colorBackground" />

                    <TextView
                        android:id="@+id/num_players_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="@font/bentonsans_bold"
                        android:text="@string/players"
                        android:textColor="@color/colorBackground" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/text_setter"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/text_static"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/maxPlaytime_setter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/max"
                            android:textColor="@color/colorBackground" />

                        <TextView
                            android:id="@+id/minPlaytime_setter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/min"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorBackground" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/age_setter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/age"
                        android:textColor="@color/colorBackground" />

                    <LinearLayout
                        android:id="@+id/num_players"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/num_players_setter_min"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/min"
                            android:textColor="@color/colorBackground" />

                        <TextView
                            android:id="@+id/num_players_setter_max"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:text="@string/max"
                            android:textColor="#FFFFFF" />

                    </LinearLayout>


                </LinearLayout>


                <ImageButton
                    android:id="@+id/openCalendar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corners"
                    android:paddingEnd="1dp"
                    android:paddingStart="1dp"
                    app:srcCompat="@drawable/ic_date_range_white_24dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/gameinfo"
                android:layout_marginStart="11dp"
                android:fontFamily="@font/bentonsans_bold"
                android:padding="10dp"
                android:text="@string/description"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_setter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:padding="10dp"
                        android:text="@string/description" />
                </LinearLayout>
            </ScrollView>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>