<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/eventIcons"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/dateIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_date_range_black_24dp"
                        android:alpha="0.5"/>

                    <ImageView
                        android:id="@+id/timeIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_access_time_black_24dp"
                        android:alpha="0.5"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/eventAttributes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:paddingBottom="15dp"
                        android:padding="5dp"
                        android:fontFamily="@font/bentonsans_bold"
                        android:text="@string/title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/dateEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingBottom="13dp"
                        android:fontFamily="@font/bentonsans_reg"
                        android:text="@string/year" />

                    <TextView
                        android:id="@+id/timeEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/bentonsans_reg"
                        android:text="@string/time"
                        android:paddingBottom="6dp"/>


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>